# Helicon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ReadMe.md  utils.cmake
Examples/: CMakeLists.txt  main.cpp
Examples/shaders/: example.hlsl
Scripts/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  LexerRule.hpp  Token.hpp  main.cpp
ShaderEmbededCodegen/: AbstractSyntaxTree.cpp  AbstractSyntaxTree.h  ControlFlows.h  VariateProxy.h  main.cpp
SourceCode/: AST  AST.hpp  SourceFilesPath.cpp  SourceFilesPath.h  TestAst.h  main.cpp
SourceCode/AST/: AST.cpp  AST.hpp  ASTTest.cpp  Enum.hpp  Node.cpp  Node.hpp  Parser.cpp  Parser.hpp
SourceCode/ShaderCodeCompiler/: ShaderCodeCompiler.h  ShaderHardcodeManager.cpp  SourceFilesPath.h
SourceCode/ShaderEmbededCodegen/: ControlFlows.h  CustomLibrary.h  ShaderEmbededCodegen.h  VariateProxy.h
SourceCode/ShaderGenerator/: ShaderGenerator.cpp  ShaderGenerator.hpp  ShaderGeneratorTest.cpp
SourceCode/ShaderGenerator/OpenGL/: ShaderGenerator.cpp  ShaderGenerator.hpp
Src/: CMakeLists.txt  main.cpp
Src/AST/: AST.cpp  Node.cpp  Node.hpp  Parser.cpp  Parser.hpp  Struct.hpp
Src/Codegen/: BuiltinVariate.h  ComputePipelineObject.h  ControlFlows.h  CustomLibrary.h  MathProxy.h  ParseHelper.h  ParseHelperImpl.h  RasterizedPipelineObject.h  TypeAlias.h  UniformProxy.h  VariateProxy.h
Src/Codegen/AST/: AST.cpp  AST.hpp  Enum.hpp  Node.cpp  Node.hpp  Parser.cpp  Parser.hpp  Struct.hpp
Src/Codegen/Generator/: ShaderGenerator.cpp  ShaderGenerator.hpp  SlangGenerator.cpp  SlangGenerator.hpp
Src/Codegen/Generator/OpenGL/: ShaderGenerator.cpp  ShaderGenerator.hpp
Src/Compiler/: ShaderCodeCompiler.cpp  ShaderCodeCompiler.h  ShaderHardcodeManager.cpp  ShaderHardcodeManager.h  ShaderLanguageConverter.cpp  ShaderLanguageConverter.h  SourceFilesPath.cpp
Src/Compiler/HardcodeShaders/: HardcodeShaders.cpp  HardcodeShaders.h  HardcodeShadersComputeShader.cpp  HardcodeShadersFragmentShader.cpp  HardcodeShadersGLSL.cpp  HardcodeShadersHLSL.cpp  HardcodeShadersSlang.cpp  HardcodeShadersSpirV.cpp  HardcodeShadersVertexShader.cpp
Src/Generator/: ShaderGenerator.cpp  ShaderGenerator.hpp
Src/Generator/OpenGL/: ShaderGenerator.cpp  ShaderGenerator.hpp
cmake/: HeliconShaderCompile.cmake
